fix: align buttons on mobile (#1989)
* Align buttons on mobile

* Left align buttons and correct spacing around add icon

--- a/packages/style/scss/buttons-links.scss
+++ b/packages/style/scss/buttons-links.scss
@@ -272,7 +272,7 @@
   color: $mediumgrey;
   font-size: $font-size-small;
   font-weight: 600;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.75rem;
   text-decoration: none;
   text-transform: uppercase;
   transition: $standard-transition;
@@ -301,6 +301,8 @@
 
     &::before {
       font-size: $font-size-medium;
+      margin-left: -2px;
+      margin-right: -1px;
 
       @at-root .xxl-page & {
         @media (min-width: $bp-4k) {
